# dn-kernel

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  README_UPDATE.md  RELEASE.md  ROADMAP.md  SECURITY.md  SUMMARY.md  SUPPORT.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/dn-kernel/: action.yml
.github/workflows/: ci.yml  clippy.yml  docs-consistency.yml  release.yml  smoke.yml
apps/dn-cli/: Cargo.toml
apps/dn-cli/src/: main.rs
apps/dn-cli/tests/: cli.rs
crates/dn-ipc/: Cargo.toml
crates/dn-ipc/src/: lib.rs
crates/dn-runtime/: Cargo.toml
crates/dn-runtime/src/: lib.rs  provider.rs  rules.rs
crates/dn-runtime/src/worker/: registry.rs  session.rs
crates/dn-workers/: Cargo.toml
crates/dn-workers/src/: lib.rs
docker/: Dockerfile
docs/: action.md  architecture.md  cli.md  compatibility.md  development.md  distribution.md  fixes.md  kernel-workflow.md  output.md  profiles.md  protocol.md  providers.md  scanner.md  threat-model.md  troubleshooting.md  workers.md
examples/profiles/: ci-fast.toml  legacy-audit.toml  maintainer-review.toml  my-security.toml
nix/: flake.nix
packaging/homebrew/: dn-kernel.rb
profiles/: kernel-c.toml
schemas/: supervisor_to_worker.json  worker_to_supervisor.json
scripts/: dev.sh  healthcheck.sh  smoke.sh
tests/c/: expected_batch.json  expected_goto_no_cleanup.json  expected_missing_init_exit.json  expected_negative_clean.json  expected_null_deref_before_check.json  expected_rcu_missing_annotation.json  expected_return_without_unlock.json  expected_sleeping_in_atomic.json  goto_no_cleanup.c  missing_init_exit.c  negative_clean.c  null_deref_before_check.c  rcu_missing_annotation.c  return_without_unlock.c  run.sh  sleeping_in_atomic.c
workers/c/: Makefile  README.md  dn-worker-c  main.c  parser.c  parser.h  rules.c  rules.h  test_sample.c
workers/java/: dn_worker.py
workers/python/: dn_worker.py  pyproject.toml  worker.py
workers/python/dn_worker/: __main__.py
workers/python/dn_worker/plugins/: __init__.py
workers/python/tests/: test_import.py
workers/typescript/: dn_worker.js
