[workspace]
resolver = "2"
members = [
    "apps/dn-cli",
    "crates/dn-ipc",
    "crates/dn-runtime",
    "crates/dn-workers",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Terminal-first repository review and scanning tool"
readme = "README.md"
keywords = ["code-review", "security", "static-analysis", "cli", "repository-audit"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
which = "8"
