[package]
name = "dn-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dn-runtime = { path = "../../crates/dn-runtime" }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
