[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dn-worker"
version = "1.0.0"
description = "Python worker for dn-kernel"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2,<3",
  "httpx>=0.27,<1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9"
]

[tool.setuptools]
packages = ["dn_worker"]

[tool.setuptools.package-dir]
"" = "."
